Fix low contrast background color for muted text

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,10 @@ h3:hover {
   color: #fac34f;
 }
 
+.text-muted {
+  color: #212529 !important;
+}
+
 .nav-item a {
   color: #188181 !important;
 }
